<resources>
    <string name="app_name">SocialFeed_HW22</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="man_emoji">👨🏻</string>
    <string name="write_comment">Write comment…</string>
    <string name="channel_id">channel_id</string>
    <string name="channel_name">RemoteMessaging</string>
</resources>